Add : Page Pilih Dosen Pembimbing Pengajuan KP di Mahasiswa

--- a/src/app/css/mahasiswa/main-page.css
+++ b/src/app/css/mahasiswa/main-page.css
@@ -1,143 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-::after,
-::before {
-    box-sizing: border-box;
+html, body {
     margin: 0;
     padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-h1 {
-    font-weight: 600;
-    font-size: 1.5rem;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    display: flex;
-}
-
-.wrapper {
-    display: flex;
     width: 100%;
-}
-
-.main {
-    flex-grow: 1;
-    height: 100vh;
-    overflow: auto;
-    transition: margin-left 0.3s ease-in-out;
-    background-color: #fafbfe;
-}
-
-/* Sidebar */
-#sidebar {
-    width: 4rem;
-    min-width: 70px;
-    height: 100vh;
-    background-color: #114D91;
-    display: flex;
-    flex-direction: column;
-    transition: width 0.3s ease-in-out;
-    overflow: hidden;
-}
-
-#sidebar.expanded {
-    width: 16rem;
-}
-
-.toggle-btn {
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-    padding: 1rem 1.5rem;
-}
-
-.toggle-btn i {
-    font-size: 1.5rem;
-    color: #FFF;
-}
-
-.sidebar-logo {
-    margin: 1rem;
-    text-align: center;
-}
-
-.sidebar-logo a {
-    color: #FFF;
-    font-size: 1.15rem;
-    font-weight: 600;
-    white-space: nowrap;
-    display: none;
-}
-
-#sidebar.expanded .sidebar-logo a {
-    display: inline;
-}
-
-.sidebar-nav {
-    flex: 1;
-    padding-top: 1rem;
-}
-
-a.sidebar-link {
-    display: flex;
-    align-items: center;
-    padding: .75rem 1.25rem;
-    color: #FFF;
-    font-size: 0.9rem;
-    white-space: nowrap;
-    border-left: 3px solid transparent;
-    transition: background-color 0.2s ease-in-out;
-}
-
-.sidebar-link i {
-    font-size: 1.2rem;
-    margin-right: 0;
-    transition: margin-right 0.3s ease-in-out;
-}
-
-#sidebar.expanded .sidebar-link i {
-    margin-right: 0.75rem;
-}
-
-a.sidebar-link:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-left: 3px solid #ffffff;
-}
-
-.sidebar-item {
-    position: relative;
-}
-
-/* Dropdown Sidebar */
-.sidebar-dropdown {
-    display: none;
-    padding-left: 1rem;
-}
-
-#sidebar.expanded .sidebar-dropdown {
-    display: block;
-}
-
-/* Indikator Dropdown */
-#sidebar.expanded .sidebar-link[data-bs-toggle="collapse"]::after {
-    content: "▼";
-    font-size: 0.8rem;
-    position: absolute;
-    right: 1.5rem;
-    transition: transform 0.2s ease-in-out;
-}
-
-#sidebar.expanded .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
-    transform: rotate(180deg);
+    height: 100%;
 }
